--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                 <i class="fa fa-2x fa-share text-white"></i>
                             </div>
                             <div class="position-relative overflow-hidden bg-light d-flex flex-column justify-content-center w-100 ps-4" style="height: 90px;">
-                                <h5>ELMRINI Hanae</h5>
+                                <h5>EL MRINI Hanae</h5>
                                 <span class="text-primary">Event Manager</span>
                                 <div class="team-social">
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -628,7 +628,7 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
+                        <p>As a former president of the Industrial Club, I had the honor of leading a dedicated team toward a shared vision: to make the club a cornerstone of innovation and hands-on training for our members. Together, we worked to create an environment where every student could develop practical skills, collaborate on ambitious industrial projects, and prepare for the challenges of the professional world. The club remains, for me, a source of pride and a symbol of the excellence and passion we all share for the industry.</p>
                         <h5 class="mb-1">RAMOUCH Abdellah</h5>
                         <span class="fst-italic">Former president</span>
                     </div>
@@ -641,7 +641,7 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
+                        <p>As a former vice-president of the Industrial Club, I had the privilege of supporting a talented team in pursuing our shared vision: to establish the club as a hub of innovation and practical training for our members. Together, we created an environment where each student could build essential skills, collaborate on impactful industrial projects, and prepare for the demands of the professional world. The club remains a source of pride for me, embodying the excellence and dedication we all bring to the field of industry.</p>
                         <h5 class="mb-1">BEN SAAD Mehdi</h5>
                         <span class="fst-italic">Former Vice-president</span>
                     </div>
@@ -654,7 +654,7 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
+                        <p>As a former Media Manager of the Industrial Club, I had the privilege of showcasing our vision and achievements to a broader audience. My role focused on highlighting the club’s commitment to innovation and practical training, ensuring that our members' projects and successes were shared and celebrated. The experience reinforced my belief in the club's mission and its impact, which continues to inspire future industry leaders and foster a strong community dedicated to excellence and growth.</p>
                         <h5 class="mb-1">RHOU Mohamed</h5>
                         <span class="fst-italic">Former Media Manager</span>
                     </div>
