--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <div class="col-lg-6 ps-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center text-white">
                     <span>Follow Us:</span>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-link text-light" href="https://www.facebook.com/ClubIndustrielAIAC/"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-link text-light" href=""><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-link text-light" href="https://www.linkedin.com/company/club-industriel-aiac/"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-link text-light" href="https://www.instagram.com/clubindusaiac/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-6 text-end">
@@ -498,9 +498,9 @@
                                 <h5>ZAOUANI Hicham</h5>
                                 <span class="text-primary">Training and Projects Manager</span>
                                 <div class="team-social">
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/Hicham2568"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.linkedin.com/in/hicham-zaouani-0828b12b9/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.instagram.com/zaouani_hicham/"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -675,10 +675,10 @@
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+212 696082980</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>clubindus@aiac.ma</p>
                 <div class="d-flex pt-3">
-                    <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square btn-primary rounded-circle me-2" href="https://www.instagram.com/clubindusaiac/"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-square btn-primary rounded-circle me-2" href="https://www.facebook.com/ClubIndustrielAIAC"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-square btn-primary rounded-circle me-2" href="https://www.linkedin.com/company/club-industriel-aiac/"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
