modification sur les pages

--- a/index.html
+++ b/index.html
@@ -479,14 +479,35 @@
                                 <h5>IDOUAHMAN HASNAE</h5>
                                 <span class="text-primary">President of the club</span>
                                 <div class="team-social">
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/profile.php?id=100009779042387&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.linkedin.com/in/hasnae-idouahman-0b5794299/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.instagram.com/hasnae.idou/profilecard/?igsh=dnU3azg1amlvYzA1"><i class="fab fa-instagram"></i></a>
                                 </div>                                                              
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item">
+                        <img class="img-fluid" src="img/team-3.jpg" alt="">
+                        <div class="d-flex">
+                            <div class="flex-shrink-0 btn-square bg-primary" style="width: 90px; height: 90px;">
+                                <i class="fa fa-2x fa-share text-white"></i>
+                            </div>
+                            <div class="position-relative overflow-hidden bg-light d-flex flex-column justify-content-center w-100 ps-4" style="height: 90px;">
+                                <h5>El BOURKADI Otmane</h5>
+                                <span class="text-primary">Vice President</span>
+                                <div class="team-social">
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/outmane.elb?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.linkedin.com/in/outmane-el-bourkadi-268783300/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.instagram.com/outmane.elb?igsh=MTU5M3VwdnpjbjNjaA=="><i class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item">
                         <img class="img-fluid" src="img/team-2.jpg" alt="">
@@ -507,26 +528,6 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="team-item">
-                        <img class="img-fluid" src="img/team-3.jpg" alt="">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 btn-square bg-primary" style="width: 90px; height: 90px;">
-                                <i class="fa fa-2x fa-share text-white"></i>
-                            </div>
-                            <div class="position-relative overflow-hidden bg-light d-flex flex-column justify-content-center w-100 ps-4" style="height: 90px;">
-                                <h5>El BOURKADI Otmane</h5>
-                                <span class="text-primary">Vice President</span>
-                                <div class="team-social">
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item">
                         <img class="img-fluid" src="img/team-4.jpg" alt="">
@@ -538,8 +539,8 @@
                                 <h5>EL MRINI Hanae</h5>
                                 <span class="text-primary">Event Manager</span>
                                 <div class="team-social">
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/hanae.elmrini.129?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.linkedin.com/in/hanae-el-mrini-7171ab240/"><i class="fab fa-linkedin-in"></i></a>
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
                                 </div>                                                              
                             </div>
@@ -558,7 +559,7 @@
                                 <span class="text-primary">Media Manager</span>
                                 <div class="team-social">
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
@@ -576,9 +577,9 @@
                                 <h5>SANAI Soumaya</h5>
                                 <span class="text-primary">General Secretary</span>
                                 <div class="team-social">
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/profile.php?id=100075770079425&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.linkedin.com/in/soumia-sanai-37b712251?/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.instagram.com/sumia_sanai?igsh=NHFjOG53Y2ZqY242"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -596,7 +597,7 @@
                                 <span class="text-primary">Treasurer</span>
                                 <div class="team-social">
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
