--- a/about.html
+++ b/about.html
@@ -89,7 +89,6 @@
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <a href="" class="btn btn-primary px-3 d-none d-lg-block">Follow</a>
-            <div ><img class="logo" src="img/log.png"></div>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -118,7 +117,7 @@
                 <div class="col-lg-6">
                     <div class="row gx-3 h-100">
                         <div class="col-6 align-self-start wow fadeInUp" data-wow-delay="0.1s">
-                            <img class="img-fluid" src="img/logo.jpg">
+                            <img class="img-fluid" src="img/logo.png">
                         </div>
                         <div class="col-6 align-self-end wow fadeInDown" data-wow-delay="0.1s">
                             <img class="img-fluid" src="img/about-1.jpg">
@@ -209,7 +208,7 @@
 
 
     <!-- Team Start -->
-    <div class="container-xxl py-5">
+    <div <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="fw-medium text-uppercase text-primary mb-2">Our Team</p>
@@ -227,34 +226,15 @@
                                 <h5>IDOUAHMAN HASNAE</h5>
                                 <span class="text-primary">President of the club</span>
                                 <div class="team-social">
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/profile.php?id=100009779042387&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.linkedin.com/in/hasnae-idouahman-0b5794299/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.instagram.com/hasnae.idou/profilecard/?igsh=dnU3azg1amlvYzA1"><i class="fab fa-instagram"></i></a>
                                 </div>                                                              
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="team-item">
-                        <img class="img-fluid" src="img/team-2.jpg" alt="">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 btn-square bg-primary" style="width: 90px; height: 90px;">
-                                <i class="fa fa-2x fa-share text-white"></i>
-                            </div>
-                            <div class="position-relative overflow-hidden bg-light d-flex flex-column justify-content-center w-100 ps-4" style="height: 90px;">
-                                <h5>ZAOUANI Hicham</h5>
-                                <span class="text-primary">Training and Projects Manager</span>
-                                <div class="team-social">
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                
+
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item">
                         <img class="img-fluid" src="img/team-3.jpg" alt="">
@@ -266,14 +246,35 @@
                                 <h5>El BOURKADI Otmane</h5>
                                 <span class="text-primary">Vice President</span>
                                 <div class="team-social">
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/outmane.elb?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.linkedin.com/in/outmane-el-bourkadi-268783300/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.instagram.com/outmane.elb?igsh=MTU5M3VwdnpjbjNjaA=="><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item">
+                        <img class="img-fluid" src="img/team-2.jpg" alt="">
+                        <div class="d-flex">
+                            <div class="flex-shrink-0 btn-square bg-primary" style="width: 90px; height: 90px;">
+                                <i class="fa fa-2x fa-share text-white"></i>
+                            </div>
+                            <div class="position-relative overflow-hidden bg-light d-flex flex-column justify-content-center w-100 ps-4" style="height: 90px;">
+                                <h5>ZAOUANI Hicham</h5>
+                                <span class="text-primary">Training and Projects Manager</span>
+                                <div class="team-social">
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/Hicham2568"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.linkedin.com/in/hicham-zaouani-0828b12b9/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.instagram.com/zaouani_hicham/"><i class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item">
                         <img class="img-fluid" src="img/team-4.jpg" alt="">
@@ -282,11 +283,11 @@
                                 <i class="fa fa-2x fa-share text-white"></i>
                             </div>
                             <div class="position-relative overflow-hidden bg-light d-flex flex-column justify-content-center w-100 ps-4" style="height: 90px;">
-                                <h5>ELMRINI Hane</h5>
+                                <h5>EL MRINI Hanae</h5>
                                 <span class="text-primary">Event Manager</span>
                                 <div class="team-social">
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/hanae.elmrini.129?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.linkedin.com/in/hanae-el-mrini-7171ab240/"><i class="fab fa-linkedin-in"></i></a>
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
                                 </div>                                                              
                             </div>
@@ -305,7 +306,7 @@
                                 <span class="text-primary">Media Manager</span>
                                 <div class="team-social">
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
@@ -323,9 +324,9 @@
                                 <h5>SANAI Soumaya</h5>
                                 <span class="text-primary">General Secretary</span>
                                 <div class="team-social">
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.facebook.com/profile.php?id=100075770079425&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.linkedin.com/in/soumia-sanai-37b712251?/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href="https://www.instagram.com/sumia_sanai?igsh=NHFjOG53Y2ZqY242"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -343,7 +344,7 @@
                                 <span class="text-primary">Treasurer</span>
                                 <div class="team-social">
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
+                                    <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
